Fix Chat with scrollbar

--- a/docs/pages/pro/ChatPage.css
+++ b/docs/pages/pro/ChatPage.css
@@ -21,10 +21,6 @@
   flex-direction: row-reverse;
 }
 
-.chat-room .scrollable-friends-list {
-  height: 570px;
-}
-
 .chat-room .scrollable-chat {
   height: 510px;
   padding-bottom: 15px;
